feat: get side effects from medication id
